<resources>
    <string name="app_name">Guardify</string>
    <string name="facebook_app_id">1699701790282298</string>
    <string name="message_splash">The Personal Smart Security Button</string>
    <string name="iris">Iris</string>
    <string name="contentImages" />
    <string name="validating">Validating</string>
    <string name="connection_issues">Connection issues</string>
    <string name="cannot_access_network_check">You can\'t access the network. Check your Internet connection.</string>
    <string name="review_settings">Review settings</string>
    <string name="location_services_disabled">Location services disabled</string>
    <string name="enable_location_services">Enable location services to use this application</string>
    <string name="enable">Enable</string>
    <string name="email">Email</string>
    <string name="view">View</string>
    <string name="password">Password</string>
    <string name="password_enter_reset">Password / Enter to change it</string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="create_account">Create an Account</string>
    <string name="must_complete_fields">You must complete the required fields</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="language">Language</string>
    <string name="password_different">The passwords are different</string>
    <string name="looks_like_connection_problems">Looks like you have a connection problem. Check your Internet connection.</string>
    <string name="connect">Connect</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="signout">Sign out</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="select_your_birth">Select your birthday</string>
    <string name="country">Country</string>
    <string name="select_country">Select country</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="searching_devices">Searching devices ...</string>
    <string name="bluetooth_off">Bluetooth disabled</string>
    <string name="no_devices_around">There are no \n devices around</string>
    <string name="search_again">Search again</string>
    <string name="connecting">Connecting</string>
    <string name="cannot_connect_device">Can not connect to device</string>
    <string name="instructions">Instructions</string>
    <string name="facebook">Facebook</string>
    <string name="contacts">Contacts</string>

    <string name="map">Map</string>
    <string name="Photo_gallery">Photo gallery</string>
    <string name="audio_gallery">Audio gallery</string>
    <string name="play">Play</string>
    <string name="deleted">Delete</string>
    <string name="exit">Exit</string>


    <string name="one_click">1 click</string>
    <string name="share_gps_tracking_first_contact">Share GPS tracking with \n the first contact</string>
    <string name="share_gps_tracking_contacts_selected">Share GPS tracking with \n all the selected contacts</string>
    <string name="take_photo">Take Photo</string>
    <string name="cancel_Video">Cancel Camera / Video</string>
    <string name="audio_recording">Start Recording Audio</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="cancel_recording">Cancel Recording</string>
    <string name="Playing_audio">Playing audio</string>
    <string name="two_click">2 clicks</string>
    <string name="share_gps_tracking_contacts_and_facebook">Share GPS tracking with all \n contacts, and post to Facebook</string>
    <string name="Record_a_video">Record a video</string>
    <string name="hold_secs">Hold ( 4 sec )</string>
    <string name="cancel_tracking">Cancel tracking</string>
    <string name="add_new_contact">Add a new contact</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="by_number">By number</string>
    <string name="by_user">By user</string>
    <string name="saving">Saving</string>
    <string name="you_have_no_contacts">You have no contacts</string>
    <string name="edit_contact">Edit a contact</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="updating">Updating</string>
    <string name="confirm_delete_contact">Are you sure do you want to delete this contact?</string>
    <string name="confirm">Confirm</string>
    <string name="deleting">Deleting</string>
    <string name="must_complete_firstname">You must complete your first name</string>
    <string name="date_updated">Data updated</string>
    <string name="gcm_defaultSenderId">213856184230</string>
    <string name="test_string">test string</string>
</resources>
