<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:ignore="MissingPrefix">

    <TextView
        fontPath="fonts/OpenSans-Semibold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/one_click"
        android:layout_marginTop="15dp"
        android:textColor="@color/text_profile"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/share_gps_tracking_first_contact"
        android:textColor="@color/text_profile"
        android:textSize="13sp" />


    <TextView
        fontPath="fonts/OpenSans-Semibold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/two_click"
        android:textColor="@color/text_profile"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/share_gps_tracking_contacts_and_facebook"
        android:textColor="@color/text_profile"
        android:textSize="13sp" />

    <TextView
        fontPath="fonts/OpenSans-Semibold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hold_secs"
        android:textColor="@color/text_profile"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/cancel_tracking"
        android:textColor="@color/text_profile"
        android:textSize="13sp" />

</LinearLayout>