<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    android:gravity="center"
    tools:context="com.apolomultimedia.guardify.LoginActivity"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:id="@+id/ll_principal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/contentImages"
            android:src="@drawable/logo_2" />

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/et_login"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_login"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_login"
                style="@style/btn_primary"
                android:layout_width="match_parent"
                fontPath="fonts/MyriadPro-Regular.otf"
                android:layout_height="42dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="25dp"
                android:stateListAnimator="@null"
                android:text="@string/login"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_facebook"
                style="@style/btn_facebook"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:stateListAnimator="@null"
                android:drawableLeft="@drawable/icn_facebook"
                android:drawablePadding="-10dp"
                android:drawableStart="@drawable/icn_facebook"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:text="@string/login_with_facebook"
                android:textAllCaps="false"
                android:textSize="15sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_logo"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/et_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/et_login"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_login"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_password2_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_login"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_login"
                android:hint="@string/first_name"
                android:inputType="text"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_login"
                android:hint="@string/last_name"
                android:inputType="text"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:textColor="@color/white"
                android:textColorHint="@color/hint_white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_register"
                style="@style/btn_primary"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:stateListAnimator="@null"
                android:layout_marginTop="25dp"
                android:text="@string/register"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/create_account"
        android:textColor="@drawable/login_click"
        android:textSize="17sp" />

</FrameLayout>
